# deploy-app-with-nixos

./: .envrc  .gitignore  configuration.nix  default.nix  deploy.nix  hie.yaml  module.nix  server.cabal
db/: schema.sql
db/migrations/: 20200611140605_setup.sql
nixos/: configuration.nix  hardware-configuration.nix
src/: Main.hs
