cabal-version: >= 1.10
name: server
version: 0.1.0
build-type: Simple

executable server
  hs-source-dirs: src
  main-is: Main.hs
  default-language: Haskell2010
  build-depends: base
               , bytestring
               , hasql
               , hasql-th
               , hedis
               , http-types
               , wai
               , warp
